[package]
name = "sledgehammer_utils"
version = "0.1.0"
edition = "2021"
authors = ["Evan Almloff <ealmlof1@stumail.jccc.edu>"]
edition = "2021"
description = "Utilities for sledgehammer-bindgen"
documentation = "https://docs.rs/sledgehammer_utils"
repository = "https://github.com/demonthos/sledgehammer_utils/"
license = "MIT"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ux = "0.1.5"
rustc-hash = "1.1.0"
once_cell = "1.16.0"
lru = "0.8.1"